--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=1024">
 <title>LAPORAN KAS GANG MAWAR 3</title>
 <style>
 :root{
@@ -247,3 +247,4 @@ loadData();
 </script>
 </body>
 </html>
+
