--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 }
 body{font-family:var(--font);background:var(--bg);margin:0;padding:20px;text-transform:uppercase;color:var(--text)}
 header{text-align:center;font-size:2rem;margin-bottom:10px}
-.fixed-left,.fixed-right{position:fixed;top:12px;z-index:1000;display:flex;flex-direction:column;gap:8px}
-.fixed-left{left:12px;align-items:flex-start}
-.fixed-right{right:12px;align-items:flex-end}
-button{padding:6px 12px;margin:4px;border:0;border-radius:8px;font-weight:600;cursor:pointer}
+/* Floating Menu Styles */
+.menu-container {position:fixed; top:12px; right:12px; z-index:1000; display:flex; flex-direction:column; align-items:flex-end; gap:8px}
+.menu-items {display:none; flex-direction:column; gap:8px; background:rgba(0,0,0,0.8); padding:10px; border-radius:8px}
+.menu-items.show {display:flex}
+button{padding:8px 16px; border:0; border-radius:8px; font-weight:600; cursor:pointer; text-transform:uppercase}
+button.main-menu {background:#333; color:#fff; border:2px solid #fff}
 button.primary{background:var(--accent);color:#fff}
 button.off{background:#999;color:#fff}
 .block{margin:16px;padding:14px;background:var(--card);border-radius:14px;box-shadow:0 2px 8px rgba(0,0,0,.08);position:relative;transition:box-shadow 0.5s}
@@ -23,7 +25,6 @@ th,td{border:1px solid var(--border);padding:6px;text-align:left}
 th{text-align:center}
 input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:border-box;text-transform:none;font-family:inherit}
 input[disabled]{background:#eee;color:#777}
-.red{background:var(--danger);color:#000;font-weight:700}
 .theme-dark{--bg:#1e1e1e;--text:#eee;--card:#2a2a2a}
 .theme-blue{--bg:#eef4ff;--text:#102040;--card:#fff}
 .theme-cyberpunk{--bg:#0a0a0a;--card:#1a001a;--text:#ff00ff;--border:#00ffcc;--accent:#ffff00;--yellow:#ffff00;}
@@ -43,14 +44,16 @@ input[disabled]{background:#eee;color:#777}
     <button onclick="nextMonth()">▶</button>
   </div>
 </header>
-<div class="fixed-left">
-<button id="themeBtn" class="off">GANTI TEMA</button>
+
+<div class="menu-container">
+    <button class="main-menu" onclick="toggleMenu()">☰ MENU</button>
+    <div class="menu-items" id="menuItems">
+        <button id="adminBtn" class="off">ADMIN OFF</button>
+        <button id="themeBtn" class="primary">GANTI TEMA</button>
+        <button id="cetakBtn" class="primary">CETAK LAPORAN</button>
+    </div>
 </div>
-<div class="fixed-right">
-<button id="adminBtn" class="off">ADMIN OFF</button>
-<button id="cetakBtn" class="primary">CETAK LAPORAN</button>
-<button id="checklistBtn" class="off">CHECKLIST KAS</button>
-</div>
+
 <div class="block" id="pemasukan">
 <h2>PEMASUKAN</h2>
 <table>
@@ -78,7 +81,6 @@ input[disabled]{background:#eee;color:#777}
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 
 <script>
-// Konfigurasi Firebase milikmu
 const firebaseConfig = {
     apiKey: "AIzaSyAn5Iw4cI8bRSGuyRr3TNNVWzQA-duRHvk",
     authDomain: "kasmawar3-59c18.firebaseapp.com",
@@ -90,7 +92,6 @@ const firebaseConfig = {
     measurementId: "G-KY0GS26WNT"
 };
 
-// Inisialisasi Firebase
 firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 
@@ -100,6 +101,12 @@ let bulan=0,tahun=2026;
 const namaBulan=['JANUARI','FEBRUARI','MARET','APRIL','MEI','JUNI','JULI','AGUSTUS','SEPTEMBER','OKTOBER','NOVEMBER','DESEMBER'];
 const namaAnggota=['SISA KAS SEBELUMNYA','RIZAL','ROMI','TRI','ANIS','FAJAR DJAKA','FAJAR SHANUM','AGUS','LUKMAN','IRAWAN','RIAN','MULYADIE','HELDI','HILMAN','NANO','TEGUH'];
 let currentTheme='';
+
+// Fungsi Toggle Menu
+function toggleMenu() {
+    const menu = document.getElementById('menuItems');
+    menu.classList.toggle('show');
+}
 
 function createRowMasuk(nama){
  const tr=document.createElement('tr');
@@ -130,7 +137,6 @@ function buildTables(){
 function lockUI(lock){document.querySelectorAll('.editable').forEach(i=>i.disabled=lock);}
 function applyAdminLock(){lockUI(!isAdmin);}
 
-// Fungsi Simpan ke Firebase
 function saveData(){
  if(!isAdmin) return;
  const key=bulan+'-'+tahun;
@@ -158,7 +164,7 @@ function recalc(){
   tr.children[4].textContent=masuk.toLocaleString('id-ID');
   const ketVal=tr.children[2].firstChild.value.toUpperCase();
   if(ketVal.includes('BELUM BAYAR')){
-   [1,2,3].forEach(i=>{const el=tr.children[i].firstChild; el.style.backgroundColor='var(--danger)'; el.style.color='#000';});
+   [1,2,3].forEach(i=>{const el=tr.children[i].firstChild; el.style.backgroundColor='var(--danger)'; el.style.color='#fff';});
   } else {
    [1,2,3].forEach(i=>{const el=tr.children[i].firstChild; el.style.backgroundColor=''; el.style.color='';});
   }
@@ -178,7 +184,7 @@ function recalc(){
  document.getElementById('saldoAkhir').textContent=saldo.toLocaleString('id-ID');
 }
 
-adminBtn.onclick=()=>{
+document.getElementById('adminBtn').onclick=()=>{
  if(!isAdmin){
   const u=prompt('USERNAME');
   const p=prompt('PASSWORD');
@@ -191,18 +197,19 @@ adminBtn.onclick=()=>{
  }
  applyAdminLock();
  recalc();
+ toggleMenu(); // Tutup menu setelah klik
 };
 
 function startAutoSave(){stopAutoSave(); autoSaveTimer=setInterval(()=>{saveData();},2500);}
 function stopAutoSave(){if(autoSaveTimer){clearInterval(autoSaveTimer);autoSaveTimer=null;}}
 
-themeBtn.onclick=()=>{
- const themes=['theme-cyberpunk','theme-dark','theme-blue'];
+document.getElementById('themeBtn').onclick=()=>{
+ const themes=['theme-cyberpunk', 'theme-dark', 'theme-blue', ''];
  let idx=themes.indexOf(currentTheme)+1;
  if(idx>=themes.length) idx=0;
  if(currentTheme) document.body.classList.remove(currentTheme);
  currentTheme=themes[idx];
- document.body.classList.add(currentTheme);
+ if(currentTheme) document.body.classList.add(currentTheme);
  document.querySelectorAll('.block').forEach(b=>b.classList.toggle('cyber-effect',currentTheme==='theme-cyberpunk'));
  recalc();
 };
@@ -210,9 +217,19 @@ themeBtn.onclick=()=>{
 document.addEventListener('input',()=>{recalc();});
 function prevMonth(){ bulan--; if(bulan<0){bulan=11;tahun--;} document.getElementById('periode').textContent=namaBulan[bulan]+' '+tahun; loadData();}
 function nextMonth(){ bulan++; if(bulan>11){bulan=0;tahun++;} document.getElementById('periode').textContent=namaBulan[bulan]+' '+tahun; loadData();}
-cetakBtn.onclick=()=>{window.scrollTo(0,0);html2canvas(document.body,{scale:2}).then(canvas=>{const link=document.createElement('a');link.download = `LAPORAN_KAS_${namaBulan[bulan]}_${tahun}.jpg`;link.href = canvas.toDataURL('image/jpeg',0.95);link.click();});}
+document.getElementById('cetakBtn').onclick=()=>{
+    toggleMenu(); 
+    window.scrollTo(0,0);
+    setTimeout(()=>{
+        html2canvas(document.body,{scale:2}).then(canvas=>{
+            const link=document.createElement('a');
+            link.download = `KAS_MAWAR3_${namaBulan[bulan]}_${tahun}.jpg`;
+            link.href = canvas.toDataURL('image/jpeg',0.95);
+            link.click();
+        });
+    }, 500);
+}
 
-// Fungsi Ambil dari Firebase
 function loadData(){
  buildTables();
  const key=bulan+'-'+tahun;
@@ -247,4 +264,3 @@ loadData();
 </script>
 </body>
 </html>
-
